# crow-hooks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
crow_hooks/: __init__.py
crow_hooks/compilation/: __init__.py  artifact_manager.py  compilation_manager.py
crow_hooks/config/: __init__.py  config_manager.py  config_models.py
crow_hooks/discovery/: __init__.py  compiler_detector.py  project_locator.py  source_discoverer.py
crow_hooks/execution/: __init__.py  build_executor.py  file_manager.py
crow_hooks/hooks/: __init__.py  hook_context.py
