[tool.poetry]
name = "crow-hooks"
version = "0.1.0"
description = "Hook system for the Crow build system"
authors = ["user-with-username"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"