[tool.poetry]
name = "crow-hooks"
version = "0.1.0"
description = "Hook system for the Crow build system"
authors = ["user-with-username"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"